Refact: fixed horizontal scrolling

--- a/CSS/elements.css
+++ b/CSS/elements.css
@@ -13,6 +13,7 @@ body {
   align-items: center;
   flex-direction: column;
   font-family: 'Oxygen', sans-serif;
+  overflow-x:hidden
 }
 
 h1,
